hemos aumentado menu de opciones

--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
                         <input type="text" name = "apellidos" pattern="[A-Z a-z\s]+">
                     </p>
                     <p>
-                        <label for="email">email</label><br>
-                        <input type="email" name = "email" required>
+                        <label for="email">Email</label><br>
+                        <input type="email" name="email" placeholder="ejemplo@unamad.edu.pe" required>
                     </p>
+                    
                     <p>
                         <label for="">direccion</label><br>
-                        <input type="text" name = "direccion">
+                        <input type="text" name = "direccion">  
                     </p>
                     <p>
                         <label for="">telefono</label><br>
